--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,17 +1,63 @@
+*{
+  box-sizing: border-box;
+  text-align: center;
+  font-family: Ariel, sans-serif;
+}
+
+h2{
+  float: right;
+  margin-top: 0px;
+  border: 1px solid black;
+}
+
+#first{
+  background-color: #d49998;
+}
+
+#second{
+  background-color: #c04543;
+}
+
+#third{
+  background-color: #e5d198;
+}
+
+section{
+  border: 1px solid black;
+  background-color: #b5c4d2;
+  margin: 1%;
+}
+
+p{
+  margin: 50px 25px 20px 25px;
+}
+
+/*for large devices*/
 @media (min-width: 992px){
-  .large{
-    /*one row*/
+  section{
+    float: left;
+    width: 31.33%;
   }
 }
 
-@media (min-width: 768px and max-width: 991px) {
-  .medium{
-   /*two rows, two on top, one on bottow*/ 
+/*for medium devices*/
+@media (min-width: 768px) and (max-width: 991px) {
+  section{
+    float: left;
+    width: 48%;
+  }
+  .three{
+    clear: left;
+    float:left;
+    width: 98%;
   }
 }
 
+/*for small devices*/
 @media (max-width: 767px){
-  .small{
-    /*three rows stacked*/
+  section{
+    float: left;
+    width: 98%;
+    margin: 15px 15px 15px 30px;
   }
 }
